--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "web-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node src/app.js"
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +11,15 @@
   "dependencies": {
     "express": "^4.17.1",
     "hbs": "^4.1.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AhmedFry/Weather-website-node.JS.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AhmedFry/Weather-website-node.JS/issues"
+  },
+  "homepage": "https://github.com/AhmedFry/Weather-website-node.JS#readme",
+  "description": ""
 }
